--- a/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
 <!-- START cards box-->
+<toaster-container [toasterconfig]="toasterconfig"></toaster-container>
+
 <div class="row">
     <div class="col-xl-3 col-md-6">
         <!-- START card-->
@@ -7,7 +9,7 @@
                 <em class="icon-cloud-upload fa-3x"></em>
             </div>
             <div class="col-8 py-3 bg-primary rounded-right">
-                <div class="h2 mt-0">1700</div>
+                <div class="h2 mt-0">{{userPollCount}}</div>
                 <div class="text-uppercase">Uploads</div>
             </div>
         </div>
@@ -15,14 +17,13 @@
     <div class="col-xl-3 col-md-6">
         <!-- START card-->
         <div class="card flex-row align-items-center align-items-stretch border-0">
-            <div class="col-4 d-flex align-items-center bg-purple-dark justify-content-center rounded-left">
+            <div class="col-4 d-flex align-items-center bg-warning-dark justify-content-center rounded-left">
                 <em class="icon-globe fa-3x"></em>
             </div>
-            <div class="col-8 py-3 bg-purple rounded-right">
-                <div class="h2 mt-0">700
-                    <small>GB</small>
+            <div class="col-8 py-3 bg-warning rounded-right">
+                <div class="h2 mt-0">{{userPollActive}}
                 </div>
-                <div class="text-uppercase">Quota</div>
+                <div class="text-uppercase">Active</div>
             </div>
         </div>
     </div>
@@ -33,8 +34,8 @@
                 <em class="icon-bubbles fa-3x"></em>
             </div>
             <div class="col-8 py-3 bg-green rounded-right">
-                <div class="h2 mt-0">500</div>
-                <div class="text-uppercase">Reviews</div>
+                <div class="h2 mt-0">{{userPollviewNum}}</div>
+                <div class="text-uppercase">Response</div>
             </div>
         </div>
     </div>
@@ -53,7 +54,7 @@
                 <div class="text-uppercase" now format="dddd"></div>
                 <br>
                 <div class="h2 mt-0" now format="h:mm"></div>
-                <div class="text-muted text-sm" now format="a"></div>
+                <div class="text-muted text-sm text-uppercase" now format="a"></div>
             </div>
         </div>
         <!-- END date widget-->
@@ -66,7 +67,7 @@
         <!-- START card-->
         <div class="card card-default">
             <div class="card-header">
-                <div class="card-title">Inbound visitor statistics</div>
+                <div class="card-title">Poll Active History</div>
             </div>
             <div class="card-body">
                 <div flot [dataset]="splineData" [options]="splineOptions" height="250"></div>
@@ -78,7 +79,7 @@
 <!-- END chart-->
 <!-- START card-->
 <div class="card card-default">
-    <div class="card-header">Demo Table #2</div>
+    <div class="card-header">Total Polls</div>
     <!-- START table-responsive-->
     <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover" id="table-ext-2">
@@ -97,7 +98,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr *ngFor="let item of userPollData; let i = index">
                     <td>
                         <div class="checkbox c-checkbox">
                             <label>
@@ -108,75 +109,15 @@
                     </td>
                     <td>
                         <div class="media">
-                            <a class="float-left" href="#">
-                                <img class="img-fluid circle" src="assets/img/user/01.jpg" alt="" />
-                            </a>
                             <div class="media-body">
-                                <div class="float-right badge badge-info">admin</div>
-                                <h4>Holly Wallace</h4>
-                                <p>Username: holly123</p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-                                vulputate fringilla. Donec lacinia congue felis in faucibus.</div>
+                                <div class="float-right badge badge-info">{{ item.poll_resNum }}</div>
+                                <h4>{{ item.poll_title }}</h4>
+                                <p>{{ item.poll_date_created }}</p>{{ item.poll_description }}</div>
                         </div>
                     </td>
                     <td class="text-center">
                         <label class="switch">
-                            <input type="checkbox" />
-                            <span></span>
-                        </label>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="checkbox c-checkbox">
-                            <label>
-                                <input type="checkbox" />
-                                <span class="fa fa-check"></span>
-                            </label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="media">
-                            <a class="float-left" href="#">
-                                <img class="img-fluid circle" src="assets/img/user/03.jpg" alt="" />
-                            </a>
-                            <div class="media-body">
-                                <div class="float-right badge badge-info">writer</div>
-                                <h4>Alexis Foster</h4>
-                                <p>Username: ali89</p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
-                                fringilla. Donec lacinia congue felis in faucibus.</div>
-                        </div>
-                    </td>
-                    <td class="text-center">
-                        <label class="switch">
-                            <input type="checkbox" checked="checked" />
-                            <span></span>
-                        </label>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="checkbox c-checkbox">
-                            <label>
-                                <input type="checkbox" />
-                                <span class="fa fa-check"></span>
-                            </label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="media">
-                            <a class="float-left" href="#">
-                                <img class="img-fluid circle" src="assets/img/user/05.jpg" alt="" />
-                            </a>
-                            <div class="media-body">
-                                <div class="float-right badge badge-info">editor</div>
-                                <h4>Mario Miles</h4>
-                                <p>Username: mariomiles</p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-                                vulputate fringilla. Donec lacinia congue felis in faucibus.</div>
-                        </div>
-                    </td>
-                    <td class="text-center">
-                        <label class="switch">
-                            <input type="checkbox" checked="checked" />
+                            <input type="checkbox" [checked] = "item.poll_status == 'true'" (change)="getActiveStatus($event,item)"/>
                             <span></span>
                         </label>
                     </td>
@@ -185,7 +126,7 @@
         </table>
     </div>
     <!-- END table-responsive-->
-    <div class="card-footer">
+    <!-- <div class="card-footer">
         <div class="d-flex">
             <div>
                 <div class="input-group">
@@ -217,6 +158,6 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 <!-- END card-->
