--- a/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
             </div>
             <div class="col-8 py-3 bg-green rounded-right">
                 <div class="h2 mt-0">{{userPollviewNum}}</div>
-                <div class="text-uppercase">Response</div>
+                <div class="text-uppercase">Views</div>
             </div>
         </div>
     </div>
