--- a/src/app/routes/pages/login/login.component.html
+++ b/src/app/routes/pages/login/login.component.html
@@ -12,7 +12,7 @@
                 <form [formGroup]="valForm" class="form-validate mb-3" role="form" name="loginForm" novalidate="" (submit)="submitForm($event, valForm.value)">
                     <div class="form-group">
                         <div class="input-group with-focus">
-                            <input class="form-control border-right-0" id="exampleInputEmail1" type="email" name="email" placeholder="Enter email" autocomplete="off" formControlName="email" required="" (click)="emailClick()" />
+                            <input class="form-control border-right-0" value="{{email_before}}" id="exampleInputEmail1" type="email" name="email" placeholder="Enter email" autocomplete="off" formControlName="email" required="" (click)="emailClick()" />
                             <div class="input-group-append">
                                 <span class="input-group-text text-muted bg-transparent border-left-0">
                                     <em class="fa fa-envelope"></em>
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form-group">
                         <div class="input-group with-focus">
-                            <input class="form-control border-right-0" id="exampleInputPassword1" type="password" name="password" placeholder="Password" formControlName="password" required="" (click)="passwordClick()" />
+                            <input class="form-control border-right-0" value="{{password_before}}" id="exampleInputPassword1" type="password" name="password" placeholder="Password" formControlName="password" required="" (click)="passwordClick()" />
                             <div class=" input-group-append ">
                                 <span class="input-group-text text-muted bg-transparent border-left-0 ">
                                     <em class="fa fa-lock "></em>
@@ -38,7 +38,7 @@
                     <div class="clearfix ">
                         <div class="checkbox c-checkbox float-left mt0 ">
                             <label>
-                                <input type="checkbox " value=" " name="account_remember " />
+                                <input type="checkbox" #remCheck name="account_remember" [checked]="true"/>
                                 <span class="fa fa-check "></span>Remember Me</label>
                         </div>
                         <div class="float-right ">
