--- a/src/app/layout/header/header.component.h.html
+++ b/src/app/layout/header/header.component.h.html
@@ -2,7 +2,7 @@
 <nav class="navbar topnavbar navbar-expand-lg navbar-light" role="navigation">
     <!-- START navbar header-->
     <div class="navbar-header">
-        <a class="navbar-brand" href="#/">
+        <a class="navbar-brand" href="home/">
             <div class="brand-logo">
                 <img class="img-fluid" src="assets/img/logo.png" alt="App Logo" />
             </div>
